--- a/Design patterns of the code/index.html
+++ b/Design patterns of the code/index.html
@@ -6,6 +6,7 @@
     <title>Design Patterns</title>
 </head>
 <body>
+    <h1>Hii How are you</h1>
     <script src="./script.js"></script>
 </body>
 </html>
