--- a/Snake Game/index.html
+++ b/Snake Game/index.html
@@ -31,6 +31,12 @@
             <div class="board">
             </div>
         </section>
+        <div class="modal">
+            <div class="start-game">
+                <h3>Welcom to the Snake Game</h3>
+                <button class="btn btn-start">Start Game</button> 
+            </div>
+        </div>
     </main>
 
 
