--- a/Snake Game/index.html
+++ b/Snake Game/index.html
@@ -33,7 +33,7 @@
         </section>
         <div class="modal">
             <div class="start-game">
-                <h3>Welcom to the Snake Game</h3>
+                <h3>Welcome to the Snake Game</h3>
                 <button class="btn btn-start">Start Game</button> 
             </div>
             <div class="game-over">
