--- a/KanbanProject/index.html
+++ b/KanbanProject/index.html
@@ -17,7 +17,7 @@
             </button>
         </nav>
         <div class="columns">
-            <div class="mains" draggable="false">
+            <div class="mains TODO" draggable="false">
                 <div class="head">
                     <h3>To Do</h3>
                     <div>Timer</div>
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mains dragging">
+            <div class="mains PROGRESS">
                 <div class="head">
                     <h3>In process</h3>
                     <div>Timer</div>
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="mains">
+            <div class="mains COMPLETED">
                 <div class="head">
                     <h3>Completed</h3>
                     <div>Timer</div>
@@ -52,6 +52,7 @@
                     </div>
                 </div>
             </div>
+            <script src="./script.js"></script>
 </body>
 
 </html>
